--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,52 @@
         xmlns:local="clr-namespace:DataBinding_wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+
+    <Window.Resources>
+        <!--<local:People x:Key="mydata" />-->
+        <Style TargetType="ListBoxItem">
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="11"/>
+            <Setter Property="Padding" Value="10"/>
+        </Style>
+        <DataTemplate x:Key="DetailTemplate">
+            <Border Width="300" Height="100" Margin="20"
+              BorderBrush="Aqua" BorderThickness="1" Padding="8">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Row="0" Grid.Column="0" Text="First Name:"/>
+                    <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding Path=FirstName}"/>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Last Name:"/>
+                    <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Path=LastName}"/>
+                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Home Town:"/>
+                    <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Path=HomeTown}"/>
+                </Grid>
+            </Border>
+        </DataTemplate>
+    </Window.Resources>
+
+    <!--<StackPanel>
+        <TextBlock>My friend: </TextBlock>
+        <ListBox Width="200" IsSynchronizedWithCurrentItem="True" ItemsSource="{Binding Source={StaticResource mydata}}"/>
+        <TextBlock FontFamily="Verdana" FontSize="11"
+               Margin="5,15,0,5" FontWeight="Bold">Information:</TextBlock>
+        <ContentControl Content="{Binding Source={StaticResource mydata}}" ContentTemplate="{Binding Source={StaticResource DetailTemplate}}" />
+    </StackPanel>-->
+
+    <StackPanel>
+        <TextBlock>My friend: </TextBlock>
+        <ListBox Width="200" IsSynchronizedWithCurrentItem="True" Name="mylistbox" />
+        <TextBlock>Infomation</TextBlock>
+        <ContentControl ContentTemplate="{Binding Source={StaticResource DetailTemplate}}" Name="mycontent"/>
+    </StackPanel>
+    
+    
 </Window>
